--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public -b hosting"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
@@ -27,5 +28,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
